<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/Search_fragment" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/saved"
            android:title="@string/Saved_fragment" />
        <item
            android:id="@+id/nav_myads"
            android:icon="@drawable/publicated"
            android:title="@string/Posted_fragment" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/Shared" />

    </group>

    <item android:title="Cuenta">
        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile"
                android:title="@string/Profile_fragment" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/LogOut" />
        </menu>
    </item>

</menu>
