<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frgProfile"
    android:background="@drawable/background2"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/Profile_fragment"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/Nametxt"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/NameView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:background="#E5E5E5"
        android:gravity="center_vertical|center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/EmailTxt"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:text="@string/Email"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/EmailView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="270dp"
        android:background="#E5E5E5"
        android:gravity="center_vertical|center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TelefonoTxt"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="350dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:text="@string/Number"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/NumeroView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="420dp"
        android:background="#E5E5E5"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/EditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="425dp"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_menu_edit" />

    <ImageView
        android:id="@+id/Secureimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="130dp"
        android:src="@android:drawable/ic_secure" />

    <ImageView
        android:id="@+id/Secureimg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="280dp"
        android:src="@android:drawable/ic_secure" />

    <Button
        android:id="@+id/ToContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/holo_orange_light"
        android:text="@string/Contactos"
        android:textColor="#ffffff" />

</FrameLayout>